--- a/homework06/Urzov_homework-practice-06-gradient_boosting.ipynb
+++ b/homework06/Urzov_homework-practice-06-gradient_boosting.ipynb
@@ -2209,7 +2209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Подберем параметры для бустинга LightGBM (Предварительно перевела значения категориальных признаков в целочисленный тип). "
+    "Подберем параметры для бустинга LightGBM (Предварительно перевел значения категориальных признаков в целочисленный тип). "
    ]
   },
   {
